--- a/.github/workflows/main_ckppeoplesuite.yml
+++ b/.github/workflows/main_ckppeoplesuite.yml
@@ -6,65 +6,53 @@ on:
       - main
   workflow_dispatch:
 
-env:
-  PYTHON_VERSION: "3.10"
-  AZ_WEBAPP_NAME: "CKPPeopleSuite"
-
-permissions:
-  contents: read
-  id-token: write
-
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      DJANGO_SETTINGS_MODULE: ${{ secrets.DJANGO_SETTINGS_MODULE }}
-      DB_NAME: ${{ secrets.DB_NAME }}
-      DB_USER: ${{ secrets.DB_USER }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      DB_HOST: ${{ secrets.DB_HOST }}
-      DB_PORT: ${{ secrets.DB_PORT }}
-      SECRET_KEY: ${{ secrets.SECRET_KEY }}
+    permissions:
+      contents: read # This is required for actions/checkout
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Set up Python version
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
+          python-version: '3.10'
 
-      - name: Create venv & install deps
+      # 🛠️ Create virtual environment & install dependencies
+      - name: Create and Start virtual environment and Install dependencies
         run: |
           python -m venv antenv
           source antenv/bin/activate
-          python -m pip install --upgrade pip setuptools wheel
-          if [ -f requirements.txt ]; then
-            python -m pip install -r requirements.txt || echo "pip install returned non-zero; continuing"
-          else
-            echo "No requirements.txt found — skipping pip install"
-          fi
+          pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: (Optional) Collect static on runner (install known missing deps first)
+      # 🔧 Run Django migrations & collectstatic using production DB credentials
+      # Make sure these secret names match what you created in GitHub Actions
+      - name: Run migrations and collect static files
+        env:
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+          # Add any other env vars your settings.py expects (DEBUG, ALLOWED_HOSTS, etc.)
         run: |
-          set -e
           source antenv/bin/activate
-          # quick-install common missing package so Django imports app modules during collectstatic
-          python -m pip install num2words || true
+          python manage.py migrate --noinput
+          python manage.py collectstatic --noinput
 
-          if [ -f manage.py ]; then
-            echo "Running collectstatic on runner (optional)..."
-            if ! python manage.py collectstatic --noinput; then
-              echo "collectstatic failed — dumping pip freeze for debugging:"
-              python -m pip freeze || true
-              echo "collectstatic on runner failed; continuing"
-            fi
-          else
-            echo "manage.py not found in repo root; skipping runner collectstatic"
-          fi
+      # 📂 List all files in the repo after build & collectstatic
+      - name: List project files (recursive)
+        run: |
+          ls -la
+          echo "----------------------"
+          ls -R
 
-      - name: Upload artifact for deployment
+      # Exclude the virtualenv from the deployment artifact
+      - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
           name: python-app
@@ -73,16 +61,26 @@ jobs:
             !antenv/
 
   deploy:
-    needs: build
     runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      id-token: write # This is required for requesting the JWT (if needed in future)
+      contents: read  # This is required for actions/checkout
 
     steps:
-      - name: Download artifact
+      - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: python-app
-          path: .
 
+      # 📂 List all files in the downloaded artifact (debugging)
+      - name: List artifact files (recursive)
+        run: |
+          ls -la
+          echo "----------------------"
+          ls -R
+
+      # 🔐 Login to Azure using AZURE_CREDENTIALS secret (JSON for service principal)
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -90,169 +88,9 @@ jobs:
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
+        id: deploy-to-webapp
         with:
-          app-name: ${{ env.AZ_WEBAPP_NAME }}
-          slot-name: Production
-
-      - name: Kudu - Run migrate (separate step)
-        env:
-          AZ_RESOURCE_GROUP: ${{ secrets.AZ_RESOURCE_GROUP }}
-          AZ_WEBAPP_NAME: ${{ env.AZ_WEBAPP_NAME }}
-        run: |
-          set -euo pipefail
-          ART="$GITHUB_WORKSPACE/deploy-artifacts"
-          mkdir -p "$ART"
-          sudo apt-get update -y
-          sudo apt-get install -y jq curl || true
-
-          echo "Fetching publishing profile for migrate..."
-          PROFILES=$(az webapp deployment list-publishing-profiles --name "$AZ_WEBAPP_NAME" --resource-group "$AZ_RESOURCE_GROUP" -o json)
-          echo "$PROFILES" > "$ART/publish_profiles.json"
-
-          PUBLISH_URL=$(echo "$PROFILES" | jq -r '.[0].publishUrl // empty')
-          USER=$(echo "$PROFILES" | jq -r '.[0].userName // empty')
-          PASS=$(echo "$PROFILES" | jq -r '.[0].userPWD // empty')
-
-          if [ -z "$PUBLISH_URL" ] || [ -z "$USER" ] || [ -z "$PASS" ]; then
-            echo "Publish profile missing; aborting migrate."
-            cat "$ART/publish_profiles.json" || true
-            exit 1
-          fi
-
-          if [[ ! "$PUBLISH_URL" =~ ^https?:// ]]; then
-            PUBLISH_URL="https://$PUBLISH_URL"
-          fi
-
-          SCM="$PUBLISH_URL"
-          echo "Kudu migrate endpoint: $SCM"
-
-          DIRS=("/home/site/wwwroot" "/home/site/wwwroot/backend" "/home/site/wwwroot/src")
-          MIGRATE_CMD="python3 manage.py migrate --noinput"
-          MIGRATE_DONE=0
-
-          for D in "${DIRS[@]}"; do
-            echo "Trying migrate in $D ..."
-            OUT="$ART/migrate_$(basename "$D").json"
-            curl -s -u "$USER:$PASS" "$SCM/api/command" \
-              -H "Content-Type: application/json" \
-              -d "{\"command\":\"$MIGRATE_CMD\",\"dir\":\"$D\"}" -o "$OUT" || true
-            echo "migrate output for $D:"
-            cat "$OUT" || true
-
-            if grep -q '"ExitCode":0' "$OUT" 2>/dev/null || grep -q '"Output":' "$OUT" 2>/dev/null && ! grep -q 'No such file or directory' "$OUT" 2>/dev/null; then
-              MIGRATE_DONE=1
-              echo "migrate appears to have succeeded in $D"
-              break
-            fi
-
-            echo "migrate failed in $D; trying next candidate."
-          done
-
-          if [ $MIGRATE_DONE -eq 0 ]; then
-            echo "Warning: migrate did not succeed in any candidate directory. Inspect $ART/*.json"
-          fi
-
-      - name: Kudu - Run collectstatic (separate step)
-        env:
-          AZ_RESOURCE_GROUP: ${{ secrets.AZ_RESOURCE_GROUP }}
-          AZ_WEBAPP_NAME: ${{ env.AZ_WEBAPP_NAME }}
-        run: |
-          set -euo pipefail
-          ART="$GITHUB_WORKSPACE/deploy-artifacts"
-          mkdir -p "$ART"
-
-          echo "Fetching publishing profile for collectstatic..."
-          PROFILES=$(az webapp deployment list-publishing-profiles --name "$AZ_WEBAPP_NAME" --resource-group "$AZ_RESOURCE_GROUP" -o json)
-          echo "$PROFILES" > "$ART/publish_profiles.json"
-
-          PUBLISH_URL=$(echo "$PROFILES" | jq -r '.[0].publishUrl // empty')
-          USER=$(echo "$PROFILES" | jq -r '.[0].userName // empty')
-          PASS=$(echo "$PROFILES" | jq -r '.[0].userPWD // empty')
-
-          if [ -z "$PUBLISH_URL" ] || [ -z "$USER" ] || [ -z "$PASS" ]; then
-            echo "Publish profile missing; aborting collectstatic."
-            cat "$ART/publish_profiles.json" || true
-            exit 1
-          fi
-
-          if [[ ! "$PUBLISH_URL" =~ ^https?:// ]]; then
-            PUBLISH_URL="https://$PUBLISH_URL"
-          fi
-
-          SCM="$PUBLISH_URL"
-          echo "Kudu collectstatic endpoint: $SCM"
-
-          DIRS=("/home/site/wwwroot" "/home/site/wwwroot/backend" "/home/site/wwwroot/src")
-          COLLECT_CMD="python3 manage.py collectstatic --noinput"
-          COLLECT_DONE=0
-
-          for D in "${DIRS[@]}"; do
-            echo "Trying collectstatic in $D ..."
-            OUT="$ART/collect_$(basename "$D").json"
-            curl -s -u "$USER:$PASS" "$SCM/api/command" \
-              -H "Content-Type: application/json" \
-              -d "{\"command\":\"$COLLECT_CMD\",\"dir\":\"$D\"}" -o "$OUT" || true
-            echo "collectstatic output for $D:"
-            cat "$OUT" || true
-
-            if grep -q '"ExitCode":0' "$OUT" 2>/dev/null || grep -q '"Output":' "$OUT" 2>/dev/null && ! grep -q 'No such file or directory' "$OUT" 2>/dev/null; then
-              COLLECT_DONE=1
-              echo "collectstatic appears to have succeeded in $D"
-              break
-            fi
-
-            echo "collectstatic failed in $D; trying next candidate."
-          done
-
-          if [ $COLLECT_DONE -eq 0 ]; then
-            echo "Warning: collectstatic did not succeed in any candidate directory. Inspect $ART/*.json"
-          fi
-
-      - name: Kudu - List deployed files (separate step)
-        env:
-          AZ_RESOURCE_GROUP: ${{ secrets.AZ_RESOURCE_GROUP }}
-          AZ_WEBAPP_NAME: ${{ env.AZ_WEBAPP_NAME }}
-        run: |
-          set -euo pipefail
-          ART="$GITHUB_WORKSPACE/deploy-artifacts"
-          mkdir -p "$ART"
-
-          echo "Fetching publishing profile for listing..."
-          PROFILES=$(az webapp deployment list-publishing-profiles --name "$AZ_WEBAPP_NAME" --resource-group "$AZ_RESOURCE_GROUP" -o json)
-          echo "$PROFILES" > "$ART/publish_profiles.json"
-
-          PUBLISH_URL=$(echo "$PROFILES" | jq -r '.[0].publishUrl // empty')
-          USER=$(echo "$PROFILES" | jq -r '.[0].userName // empty')
-          PASS=$(echo "$PROFILES" | jq -r '.[0].userPWD // empty')
-
-          if [ -z "$PUBLISH_URL" ] || [ -z "$USER" ] || [ -z "$PASS" ]; then
-            echo "Publish profile missing; aborting listing."
-            cat "$ART/publish_profiles.json" || true
-            exit 1
-          fi
-
-          if [[ ! "$PUBLISH_URL" =~ ^https?:// ]]; then
-            PUBLISH_URL="https://$PUBLISH_URL"
-          fi
-
-          SCM="$PUBLISH_URL"
-          echo "Listing /home/site/wwwroot ..."
-          curl -s -u "$USER:$PASS" "$SCM/api/vfs/site/wwwroot/" -o "$ART/wwwroot.json" || true
-          echo "Listing /home/site/wwwroot/staticfiles ..."
-          curl -s -u "$USER:$PASS" "$SCM/api/vfs/site/wwwroot/staticfiles" -o "$ART/staticfiles.json" || true
-          echo "Saved wwwroot.json and staticfiles.json to $ART"
-
-      - name: Upload deployed-file-lists artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: deployed-file-lists
-          path: deploy-artifacts
-
-      - name: Restart Web App
-        env:
-          AZ_RESOURCE_GROUP: ${{ secrets.AZ_RESOURCE_GROUP }}
-          AZ_WEBAPP_NAME: ${{ env.AZ_WEBAPP_NAME }}
-        run: |
-          az webapp restart --resource-group "$AZ_RESOURCE_GROUP" --name "$AZ_WEBAPP_NAME"
-
-# Reference screenshot (uploaded): /mnt/data/2488467a-de11-4f33-8a13-7a68b4c6513f.png
+          app-name: 'CKPPeopleSuite'
+          slot-name: 'Production'
+          # Optional: explicitly specify package, if needed
+          # package: .
