--- a/.github/workflows/main_ckppeoplesuite.yml
+++ b/.github/workflows/main_ckppeoplesuite.yml
@@ -20,17 +20,14 @@ jobs:
         with:
           python-version: '3.10'
 
-      # Install dependencies for CI (to run manage.py) AND into .python_packages for Azure
-      - name: Install dependencies (local + Azure .python_packages)
+      # Install dependencies into .python_packages for Azure
+      - name: Install dependencies into .python_packages
         run: |
           python -m pip install --upgrade pip
-          # Install for local/CI (so manage.py works)
-          python -m pip install --no-cache-dir -r requirements.txt
-          # Install a copy for Azure runtime under .python_packages
           mkdir -p .python_packages/lib/site-packages
           python -m pip install --no-cache-dir -r requirements.txt --target=".python_packages/lib/site-packages"
 
-      # Run migrations and collectstatic against your Azure DB
+      # Run migrations and collect static using .python_packages
       - name: Run migrations and collect static files
         env:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
@@ -44,9 +41,8 @@ jobs:
           EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
           EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          # Make sure Django can also see the .python_packages if needed
-          PYTHONPATH: .python_packages/lib/site-packages
         run: |
+          export PYTHONPATH=".python_packages/lib/site-packages"
           python manage.py migrate --noinput
           python manage.py collectstatic --noinput
 
@@ -56,6 +52,7 @@ jobs:
           echo "----------------------"
           ls -R
 
+      # IMPORTANT: include .python_packages, but exclude git + __pycache__
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
