--- a/.github/workflows/main_ckppeoplesuite.yml
+++ b/.github/workflows/main_ckppeoplesuite.yml
@@ -9,9 +9,6 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
 
     steps:
       - name: Checkout code
@@ -22,25 +19,20 @@ jobs:
         with:
           python-version: "3.10"
 
-      # (Optional) Install deps and run tests locally in CI
-      - name: Install dependencies (for CI only)
+      - name: Install dependencies into .python_packages
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
+          # create structure expected by Azure Python container
+          mkdir -p .python_packages/lib/site-packages
+          # install ALL deps (including Django) into .python_packages
+          python -m pip install --no-cache-dir -r requirements.txt --target=".python_packages/lib/site-packages"
+          echo "=== Showing .python_packages content ==="
+          ls -R .python_packages
 
-      # (Optional) Run migrations in CI just to catch errors
-      # This does NOT affect Azure DB, it uses GitHub runner DB (if you configure it)
-      # You can comment this out if it breaks.
-      # - name: Run Django checks
-      #   env:
-      #     DJANGO_SETTINGS_MODULE: smarthr_erp.deployment
-      #   run: |
-      #     python manage.py check
-
-      - name: Create deployment zip
+      - name: Zip project (source + .python_packages)
         run: |
-          zip -r release.zip . \
-            -x "*.git*" "*__pycache__*" "*.venv*" "venv/*" ".venv/*"
+          zip -r app.zip . \
+            -x "*.git*" "*__pycache__*" "*.pytest_cache*" "*.venv*" "venv/*"
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -52,4 +44,4 @@ jobs:
         with:
           app-name: "CKPPeopleSuite"
           slot-name: "Production"
-          package: "release.zip"
+          package: app.zip
